// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerMessagesContext should apply a hook for retrieving messages data from a selectors: error response 1`] = `
Object {
  "data": Object {
    "cloudigradeMismatch": false,
  },
  "error": true,
  "fulfilled": undefined,
  "pending": undefined,
}
`;

exports[`BannerMessagesContext should apply a hook for retrieving messages data from a selectors: mock store error response 1`] = `
Object {
  "data": Object {
    "cloudigradeMismatch": false,
  },
  "error": true,
  "fulfilled": false,
  "pending": false,
}
`;

exports[`BannerMessagesContext should apply a hook for retrieving messages data from a selectors: mock store success response 1`] = `
Object {
  "data": Object {
    "cloudigradeMismatch": true,
  },
  "error": false,
  "fulfilled": true,
  "pending": false,
}
`;

exports[`BannerMessagesContext should apply a hook for retrieving messages data from a selectors: success response 1`] = `
Object {
  "data": Object {
    "cloudigradeMismatch": false,
  },
  "error": undefined,
  "fulfilled": true,
  "pending": undefined,
}
`;

exports[`BannerMessagesContext should return specific properties: specific properties 1`] = `
Object {
  "useGetAppMessages": [Function],
}
`;
